# swarm-carry

./: .env.example  .gitignore  .gitmodules  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer-novnc.json  devcontainer-x11.json  devcontainer.json  requirements.txt
demos/holonomic_carriage_demo/: demo.py
demos/mecanum_push_demo/: demo.py
demos/mecanum_ros2_demo/: demo.py
demos/mujoco_swarm_demo/: README.md
demos/mujoco_swarm_demo/scenes/: scene.xml
demos/mujoco_swarm_demo/scripts/: run_demo.py
demos/research_scenario_demo/: demo.py
docs/: architecture.md  scenario.md  vnc-setup.md  vscode-setup.md  x11-setup.md
experiments/centralised_contact_health_fg/: PROBLEM_STATEMENT.md  run_experiment.py
experiments/centralised_drcap_fg/: PROBLEM_STATEMENT.md  run_experiment.py
experiments/centralised_force_fg/: PROBLEM_STATEMENT.md  run_experiment.py  run_experiment_old.py
experiments/centralised_force_fg_cvel/: PROBLEM_STATEMENT.md  run_experiment.py
experiments/com_estimation/: formulations.md
experiments/decentralised/: GBP.py
experiments/distributed_contact_health_fg/: PROBLEM_STATEMENT.md
experiments/drcap_fg/: PROBLEM_STATEMENT.md  run_experiment.py
experiments/force_distributed/: run_experiment.py  run_experiment_diagonal.py
experiments/forceless_centralised_cvel/: run_experiment.py
experiments/gbp_estimation/: GBP_ESTIMATION_PROBLEM.md  test_ros2_backend.py  visualize_factor_graph.py
experiments/mpc_scaling/: HOWTO.md  PROBLEM_STATEMENT.md  run_scaling_experiment.py
experiments/mpc_scaling/analysis/: plot_scaling_laws.py  scaling_law_observations.txt
experiments/mrcap_fg/: IMPLEMENTATION.md  PROBLEM_STATEMENT.md  STRAFE_EFFICIENCY_FINDINGS.md  diagnose_formation.py  diagnose_strafe_efficiency.py  diagnose_vel_feedback.py  plot_results.py  results.json  run_experiment.py
experiments/statistics/: check_formation.py  demo_controllers.py  generate_findings.py  run_report_experiments.py  run_tests.py
info/: contact_diagnostic.py  force_fg_cvel_review.md  forces_after_before.txt  load_cell_investigation.md  load_cell_sweep.py  mrcap_different_weights.txt  sensor_diagnostic.py  simulate_load_cells.md  velocity_commands_not_uniformly_executed_findings.md
models/turtlebot3/: turtlebot3_waffle_pi.xml
real_robot/: IMPLEMENTATION_PLAN.md  README.md  setup.cfg
real_robot/config/: dev.env.example  network.yaml  network.yaml.example
real_robot/laptop/: analyse_recordings.py  central_runner.py  control_panel.py  goal_setter.py  live_viewer.py  mocap_bridge.py  record.py  reset_planner.py  review.py  smoketest_comms.py  smoketest_drive.py  smoketest_formation.py  test_move_robot.py
real_robot/robot/: agent_runner.py  load_cell_reader.py  ros1_bridge.py
real_robot/scripts/: Makefile  check_comms.py  deploy.sh  launch.sh  mocap_echo.py  mocap_pub.py  owl_bridge.cpp  poweroff.sh  setup_robot.sh
real_robot/tests/: ROBOT_SETUP.md  test_load_cells.py  test_messages.py  test_network_laptop.py  test_network_robot.py  test_ros1_bridge.py  test_zmq_backend.py  test_zmq_pub.py
real_robot/transport/: messages.py
report/info/: contact_health_fg_notes.md
ros_mujoco/src/mujoco_multi_agv/: package.xml  setup.cfg  setup.py
ros_mujoco/src/mujoco_multi_agv/launch/: sim.launch.py
ros_mujoco/src/mujoco_multi_agv/mujoco_multi_agv/: __init__.py  mujoco_interface.py  mujoco_sim_node.py
scripts/: build.sh  docker-build.sh  docker-run.sh  docker-shell.sh  run.sh  setup.sh  start-novnc.sh  start-vnc.sh  stop-vnc.sh
src/control_scaling_experiments/: .gitignore  README.md  __init__.py  requirements.txt  test_setup.py
src/control_scaling_experiments/analysis/: __init__.py  plot_scaling_laws.py
src/inverted_pendulum/: README.md
src/inverted_pendulum/inverted_pendulum_bringup/: CMakeLists.txt  package.xml
src/inverted_pendulum/inverted_pendulum_bringup/config/: inverted_pendulum_bridge.yaml
src/inverted_pendulum/inverted_pendulum_bringup/launch/: diff_drive.launch.py  inverted_pendulum.launch.py  rrbot_setup.launch.py
src/inverted_pendulum/inverted_pendulum_controller/: package.xml  setup.cfg  setup.py
src/inverted_pendulum/inverted_pendulum_controller/config/: cart_controllers.yaml  controllers.yaml
src/inverted_pendulum/inverted_pendulum_controller/inverted_pendulum_controller/: inverted_pendulum_control.py
src/inverted_pendulum/inverted_pendulum_controller/inverted_pendulum_controller/controllers/: lqr_controller.py
src/mecanum_ros2_demo/: README.md  demo.py
src/swarm_agent/: package.xml  setup.py
src/swarm_agent/config/: agent_params.yaml
src/swarm_agent/launch/: agent.launch.py
src/swarm_agent/swarm_agent/: agent_controller_node.py
src/swarm_central/: package.xml  setup.py
src/swarm_central/config/: central_params.yaml
src/swarm_central/launch/: central.launch.py
src/swarm_central/swarm_central/: central_controller_node.py
src/swarm_mocap/: CMakeLists.txt  README.md  package.xml
src/swarm_mocap/config/: mocap_params.yaml
src/swarm_mocap/launch/: mocap.launch.py
src/swarm_mocap/src/: mocap_node.cpp
src/swarm_mocap/test/: smoke_test.py
src/swarm_mujoco_bridge/: package.xml  setup.py
src/swarm_mujoco_bridge/config/: bridge_params.yaml
src/swarm_mujoco_bridge/launch/: holonomic.launch.py  sim.launch.py
src/swarm_mujoco_bridge/swarm_mujoco_bridge/: bridge_node.py  holonomic_bridge_node.py
swarmlib/: __init__.py  setup.py
swarmlib/communication/: ros2_backend.py  zmq_backend.py
swarmlib/controllers/: __init__.py  base_controller.py  centralized_mpc.py  centroid_estimator.py  contact_health_controller.py  contact_health_distributed_controller.py  drcap_centralised_controller.py  drcap_distributed_controller.py  force_centralised_controller.py  force_centralised_controller_cvel.py  force_distributed_controller.py  forceless_centralised_controller.py  mrcap_controller.py  weighted_centroid_estimator.py
swarmlib/simulation/: __init__.py  env.py  generate_holonomic_scene.py  generate_mecanum_scene.py  generate_scene.py  holonomic_env.py  mecanum_env.py  temp_scene.xml
(+57 files in other folders)
