<?xml version="1.0"?>
<package format="3">
  <name>swarm_agent</name>
  <version>0.1.0</version>
  <description>
    Per-robot ROS2 agent node for swarm payload transport.
    Runs one instance per physical robot. Team members implement their
    controller by swapping the controller field in AgentControllerNode.
  </description>

  <maintainer email="todo@todo.com">swarm-carry team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
