<?xml version="1.0"?>
<package format="3">
  <name>swarm_mocap</name>
  <version>0.1.0</version>
  <description>
    Native ROS2 driver for the PhaseSpace MoCap system.
    Connects directly to the OWL server via libowlsock and publishes
    rigid-body and marker poses as standard geometry_msgs types.
    No ROS1 or ros1_bridge required.
  </description>

  <maintainer email="todo@todo.com">swarm-carry team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
