<?xml version="1.0"?>
<package format="3">
  <name>swarm_mujoco_bridge</name>
  <version>0.1.0</version>
  <description>
    MuJoCo-ROS2 bridge for swarm payload transport simulation.
    Publishes robot/payload states and forces; subscribes to cmd_vel commands.
    Provides the same topic interface as real TurtleBot3 robots.
  </description>

  <maintainer email="todo@todo.com">swarm-carry team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
