<?xml version="1.0"?>
<package format="3">
  <name>mujoco_multi_agv</name>
  <version>0.0.1</version>
  <description>MuJoCo multi robot simulation</description>
  <maintainer email="andy@example.com">andy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



<!-- <?xml version="1.0"?>
<package format="3">
  <name>mujoco_multi_agv</name>
  <version>0.0.1</version>
  <description>MuJoCo multi-robot AGV simulation integrated with ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Needed for launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> -->

